Sonar fix - Unexpected unknown property white-space-collapse

--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -134,7 +134,7 @@
   border-bottom: 1px solid var(--overlay-background-color);
   display: grid;
   grid-template-columns: 50% 50%;
-  white-space-collapse: collapse;
+  white-space: normal;
   text-overflow: ellipsis;
 }
 
